[package]
name = "IL_calculator"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"
fltk = { version = "^1.2", features = ["fltk-bundled"] }
fltk-theme = "0.4.2"
fltk-flex = "0.2.1"
